add more content to the home page

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -36,6 +36,15 @@
     </div>
   </div>
   <div class="box-container">
+    <div class="image-two d-none d-lg-block">
+      <img class="clipart-two" src="../../../assets/icecube-tray.svg" alt="clipart">
+    </div>
+    <div class="image-three d-none d-lg-block">
+      <img class="clipart-three float-right" src="../../../assets/pen.svg" alt="clipart">
+    </div>
+    <div class="image-four d-none d-lg-block">
+      <img class="clipart-four float-right" src="../../../assets/birb.svg" alt="clipart">
+    </div>
     <div class="row box">
       <div class="col-lg-6 my-auto">
         <div class="d-flex justify-content-center mb-5 mb-lg-0">
@@ -69,77 +78,113 @@
     ONE DAY AT A TIME
   </div>
   <div class="row">
-      <div class="col-lg-4 col-md-6 content-card">
-          <div class="card-big-shadow">
-              <div class="card card-just-text" data-background="color" data-color="blue" data-radius="none">
-                  <div class="content">
-                      <h6 class="category">Idea</h6>
-                      <h4 class="title" style="color:rgb(107, 107, 107);">Blue Card</h4>
-                      <p class="description">Talk about a time where you had to overcome something that you thought you would never be able to overcome.</p>
-                  </div>
-              </div> <!-- end card -->
-          </div>
+    <div class="col-lg-4 col-md-6 content-card">
+      <div class="card-big-shadow">
+          <div class="card card-just-text" data-background="color" data-color="default" data-radius="none">
+              <div class="content">
+                  <h6 class="category">About</h6>
+                  <h4 class="title" style="color:rgb(107, 107, 107);">Original Card</h4>
+                  <p class="description">When you signup you get a personal notebook added to your profile to be used for whatever you want!</p>
+              </div>
+          </div> <!-- end card -->
       </div>
-      
-      <div class="col-lg-4 col-md-6 content-card">
-          <div class="card-big-shadow">
-              <div class="card card-just-text" data-background="color" data-color="green" data-radius="none">
-                  <div class="content">
-                      <h6 class="category">About</h6>
-                      <h4 class="title" style="color:rgb(107, 107, 107);">Green Card</h4>
-                      <p class="description">Create note cards that contain anything you wish to talk about and allow feedback from other users!</p>
-                  </div>
-              </div> <!-- end card -->
-          </div>
+    </div>
+
+    <div class="col-lg-4 col-md-6 content-card">
+      <div class="card-big-shadow">
+          <div class="card card-just-text" data-background="color" data-color="red" data-radius="none">
+              <div class="content">
+                  <h6 class="category">About</h6>
+                  <h4 class="title" style="color:rgb(107, 107, 107);">Red Card</h4>
+                  <p class="description">Currently profiles are private. Public profiles will be coming soon in the next update along with other neat features! Stay tuned. :D</p>
+              </div>
+          </div> <!-- end card -->
       </div>
-      
-      <div class="col-lg-4 col-md-6 content-card">
-          <div class="card-big-shadow">
-              <div class="card card-just-text" data-background="color" data-color="yellow" data-radius="none">
-                  <div class="content">
-                      <h6 class="category">About</h6>
-                      <h4 class="title" style="color:rgb(107, 107, 107);" style="color:rgb(107, 107, 107);">Yellow Card</h4>
-                      <p class="description">Anxiety about a dental visit? Maybe another user shared an experience that can possibly ease some of your anxiety. :)</p>
-                  </div>
-              </div> <!-- end card -->
-          </div>
+    </div>
+
+    <div class="col-lg-4 col-md-6 content-card">
+      <div class="card-big-shadow">
+          <div class="card card-just-text" data-background="color" data-color="grey" data-radius="none">
+              <div class="content">
+                  <h6 class="category">About</h6>
+                  <h4 class="title" style="color:rgb(107, 107, 107);">Grey Card</h4>
+                  <p class="description">Privacy is our number one priority. We don't share your information with anyone and we will always stand by that.</p>
+              </div>
+          </div> <!-- end card -->
       </div>
-      
-      <div class="col-lg-4 col-md-6 content-card">
-          <div class="card-big-shadow">
-              <div class="card card-just-text" data-background="color" data-color="brown" data-radius="none">
-                  <div class="content">
-                      <h6 class="category">Idea</h6>
-                      <h4 class="title" style="color:rgb(107, 107, 107);">Brown Card</h4>
-                      <p class="description">Share some information that you think might be insightful to others such as how hot the sun is, how vast is the ocean, or if aliens do exists...</p>
-                  </div>
-              </div> <!-- end card -->
-          </div>
+    </div>
+
+    <div class="col-lg-4 col-md-6 content-card">
+      <div class="card-big-shadow">
+          <div class="card card-just-text" data-background="color" data-color="green" data-radius="none">
+              <div class="content">
+                  <h6 class="category">About</h6>
+                  <h4 class="title" style="color:rgb(107, 107, 107);">Green Card</h4>
+                  <p class="description">Create note cards that contain anything you wish to talk about and allow feedback from other users!</p>
+              </div>
+          </div> <!-- end card -->
       </div>
-      
-      <div class="col-lg-4 col-md-6 content-card">
-          <div class="card-big-shadow">
-              <div class="card card-just-text" data-background="color" data-color="purple" data-radius="none">
-                  <div class="content">
-                      <h6 class="category">Idea</h6>
-                      <h4 class="title" style="color:rgb(107, 107, 107);">Purple Card</h4>
-                      <p class="description">Do you like to cook? Why don't you share a recipe with us. No gaurantee that it will come out as good as yours but it's okay!</p>
-                  </div>
-              </div> <!-- end card -->
-          </div>
-      </div>
-      
-      <div class="col-lg-4 col-md-6 content-card">
-          <div class="card-big-shadow">
-              <div class="card card-just-text" data-background="color" data-color="pink" data-radius="none">
-                  <div class="content">
-                      <h6 class="category">About</h6>
-                      <h4 class="title" style="color:rgb(107, 107, 107);">Pink Card</h4>
-                      <p class="description">Make yourself anonymous when creating posts if you don't feel comfortable sharing your name. We don't judge here and we never will.</p>
-                  </div>
-              </div> <!-- end card -->
-          </div>
-      </div>
+    </div>
+
+    <div class="col-lg-4 col-md-6 content-card">
+        <div class="card-big-shadow">
+            <div class="card card-just-text" data-background="color" data-color="blue" data-radius="none">
+                <div class="content">
+                    <h6 class="category">Idea</h6>
+                    <h4 class="title" style="color:rgb(107, 107, 107);">Blue Card</h4>
+                    <p class="description">Talk about a time where you had to overcome something that you thought you would never be able to overcome.</p>
+                </div>
+            </div> <!-- end card -->
+        </div>
+    </div>
+    
+    <div class="col-lg-4 col-md-6 content-card">
+        <div class="card-big-shadow">
+            <div class="card card-just-text" data-background="color" data-color="yellow" data-radius="none">
+                <div class="content">
+                    <h6 class="category">Idea</h6>
+                    <h4 class="title" style="color:rgb(107, 107, 107);" style="color:rgb(107, 107, 107);">Yellow Card</h4>
+                    <p class="description">Anxiety about a dental visit? Maybe another user shared an experience that can possibly ease some of your anxiety. :)</p>
+                </div>
+            </div> <!-- end card -->
+        </div>
+    </div>
+    
+    <div class="col-lg-4 col-md-6 content-card">
+        <div class="card-big-shadow">
+            <div class="card card-just-text" data-background="color" data-color="brown" data-radius="none">
+                <div class="content">
+                    <h6 class="category">Idea</h6>
+                    <h4 class="title" style="color:rgb(107, 107, 107);">Brown Card</h4>
+                    <p class="description">Share some information that you think might be insightful to others such as how hot the sun is, how vast is the ocean, or if aliens do exists...</p>
+                </div>
+            </div> <!-- end card -->
+        </div>
+    </div>
+    
+    <div class="col-lg-4 col-md-6 content-card">
+        <div class="card-big-shadow">
+            <div class="card card-just-text" data-background="color" data-color="purple" data-radius="none">
+                <div class="content">
+                    <h6 class="category">Idea</h6>
+                    <h4 class="title" style="color:rgb(107, 107, 107);">Purple Card</h4>
+                    <p class="description">Do you like to cook? Why don't you share a recipe with us. No gaurantee that it will come out as good as yours but it's okay!</p>
+                </div>
+            </div> <!-- end card -->
+        </div>
+    </div>
+    
+    <div class="col-lg-4 col-md-6 content-card">
+        <div class="card-big-shadow">
+            <div class="card card-just-text" data-background="color" data-color="pink" data-radius="none">
+                <div class="content">
+                    <h6 class="category">About</h6>
+                    <h4 class="title" style="color:rgb(107, 107, 107);">Pink Card</h4>
+                    <p class="description">Make yourself anonymous when creating posts if you don't feel comfortable sharing your name. We don't judge here and we never will.</p>
+                </div>
+            </div> <!-- end card -->
+        </div>
+    </div>
   </div>
   <div class="my-5">
     <div class="row">
