--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -36,9 +36,19 @@
     width: 100%;
 }
 
+.profile-container {
+    position: relative;
+}
+
+.profile-container > button {
+    position: absolute;
+    bottom: -5px;
+    right: 15%;
+    background: rgb(255, 149, 49);
+}
+
 .avatar {
     width:70%;
-    border: 2px solid black;
 }
 
 .titleText {
@@ -56,9 +66,9 @@
 }
 
 .mat-icon{
-    height:25px !important;
-    width:25px !important;
-    font-size:25px !important;
+    height:25px;
+    width:25px;
+    font-size:25px;
 }
 
 .mat-primary {
@@ -72,6 +82,143 @@
     -webkit-animation: fadeIn 1s forwards, slideInTop 0.5s forwards;
     -moz-animation: fadeIn 1s forwards, slideInTop 0.5s forwards;
     animation: fadeIn 1s forwards, slideInTop 0.5s forwards;
+}
+
+.loading {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+    z-index: 1;
+}
+
+.date {
+    position:absolute;
+    font-size:12px;
+    padding:10px;
+    opacity: 0.4;
+}
+
+.my-pagination {
+    transform: translate(-1.5rem, 1rem);
+}
+
+.custom-modal {
+    position:fixed;
+    width: 100%;
+    height: 100%;
+    background-color:rgba(0, 0, 0, 0.363);
+    z-index:2;
+    -webkit-animation: fadeIn 0.5s forwards;
+    -moz-animation: fadeIn 0.5s forwards;
+    animation: fadeIn 0.5s forwards;
+}
+
+.modal-container {
+    position: fixed;
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width:90%;
+    height:525px;
+    background-color:#dff5ff;
+    box-shadow: -5px 5px 10px rgb(75, 75, 75);
+    border-radius: 10px;
+    overflow-y:scroll;
+    z-index:1;
+    -webkit-animation: fadeIn 0.5s forwards, slideInTop 0.4s forwards;
+    -moz-animation: fadeIn 0.5s forwards, slideInTop 0.4s forwards;
+    animation: fadeIn 0.5s forwards, slideInTop 0.4s forwards;
+}
+
+.m-content {
+    padding:15px;
+    margin-right:auto;
+    margin-left:auto;
+}
+
+.art {
+    width:  125px;
+    height: 125px;
+    object-fit: cover;
+    cursor:pointer;
+    transition: transform 0.2s linear;
+}
+
+.art:hover {
+    transform: scale(1.2);
+}
+
+.exit {
+    position:fixed;
+    top: 10%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+}
+
+.image-one {
+    width: 40%;
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    opacity: 1;
+    padding: 20px;
+}
+
+.clipart-one {
+    width: 40%;
+    transition: transform 0.2s linear;
+}
+
+.image-three {
+    width: 40%;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    opacity: 0.2;
+}
+
+.clipart-three {
+    width: 40%;
+}
+
+.image-four {
+    width: 40%;
+    position: absolute;
+    top: 25px;
+    right: 50px;
+    opacity: 0.2;
+    padding: 5px;
+}
+
+.clipart-four {
+    float: right;
+    width: 30%;
+}
+
+.clipart-one-mobile {
+    width: 40%;
+}
+
+.image-two {
+    width: 40%;
+    position: fixed;
+    bottom: 0px;
+    opacity: 0.1;
+    padding-left: 15px;
+}
+
+.clipart-two {
+    width: 40%;
+}
+
+.clipart-one:hover {
+    cursor: pointer;
+    transform: scale(1.2);
 }
 
 button {
@@ -271,11 +418,47 @@ a:hover, a:focus {
 }
 
 .card[data-color="pink"] .message {
-    color: rgb(255, 113, 137);
+    color: rgb(221, 86, 108);
 }
 
 .card[data-color="pink"] .author {
-    color: rgb(255, 140, 159);
+    color: rgb(236, 109, 130);
+}
+
+.card[data-color="grey"] {
+    background: rgb(189, 189, 189);
+}
+
+.card[data-color="grey"] .message {
+    color: rgb(82, 82, 82);
+}
+
+.card[data-color="grey"] .author {
+    color: rgb(121, 121, 121);
+}
+
+.card[data-color="red"] {
+    background: rgb(255, 137, 137);
+}
+
+.card[data-color="red"] .message {
+    color: rgb(158, 69, 69);
+}
+
+.card[data-color="red"] .author {
+    color: rgb(195, 88, 88);
+}
+
+.card[data-color="default"] {
+    background: #fff2c7;
+}
+
+.card[data-color="default"] .message {
+    color: #999073;
+}
+
+.card[data-color="default"] .author {
+    color: #beb28c;
 }
 
 @media (min-width: 40em) {
@@ -293,4 +476,8 @@ a:hover, a:focus {
         margin: auto;
     }
     
+    .modal-container {
+        max-width: 750px;
+    }
+
 }
