--- a/src/app/components/create-note/create-note.component.html
+++ b/src/app/components/create-note/create-note.component.html
@@ -16,7 +16,7 @@
         </div>
     </div>
 </div>
-<div class="custom-container pb-4">
+<div class="custom-container pb-4" [ngClass]="{ fade: fadeNoteForm }">
     <div class="row my-lg-0">
         <div class="col-md-6">
             <div class="my-3">
