--- a/src/app/components/create-post/create-post.component.scss
+++ b/src/app/components/create-post/create-post.component.scss
@@ -108,7 +108,18 @@
 }
 
 .fade {
+    position: relative;
+    isolation: isolate;
     opacity: 0.7;
+}
+
+.fade:after {
+    content: '';
+    position: absolute;
+    inset:0;
+    background:black;
+    opacity:0;
+    z-index:2
 }
 
 .custom-modal {
@@ -422,6 +433,14 @@ textarea {
 
     .error-text {
         font-size: 21px;
+    }
+
+    .color-buttons {
+        margin:auto;
+        width: 100vw;
+        margin-left: calc(50% - 50vw);
+        padding-left: 20px;
+        padding-right: 20px;
     }
     
 }
