add more content to the home page

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -84,7 +84,7 @@
               <div class="content">
                   <h6 class="category">About</h6>
                   <h4 class="title" style="color:rgb(107, 107, 107);">Original Card</h4>
-                  <p class="description">When you signup you get a personal notebook added to your profile to be used for whatever you want!</p>
+                  <p class="description">When you sign up you get a personal notebook added to your profile to be used for whatever you want!</p>
               </div>
           </div> <!-- end card -->
       </div>
@@ -96,7 +96,7 @@
               <div class="content">
                   <h6 class="category">About</h6>
                   <h4 class="title" style="color:rgb(107, 107, 107);">Red Card</h4>
-                  <p class="description">Currently profiles are private. Public profiles will be coming soon in the next update along with other neat features! Stay tuned. :D</p>
+                  <p class="description">Currently profiles are private. Public profiles will be coming soon in the next update along with other neat features. Stay tuned! :D</p>
               </div>
           </div> <!-- end card -->
       </div>
