--- a/src/app/components/note/note.component.html
+++ b/src/app/components/note/note.component.html
@@ -30,7 +30,7 @@
         </div>
     </div>
 </div>
-<div class="custom-container">
+<div class="custom-container" [ngClass]="{ fade: fadeEditForm || fadePost }">
     <div class="row mb-4 my-lg-0">
         <div class="col-md-6">
             <div class="my-3">
