--- a/src/app/components/note/note.component.scss
+++ b/src/app/components/note/note.component.scss
@@ -123,7 +123,18 @@
 }
 
 .fade {
+    position: relative;
+    isolation: isolate;
     opacity: 0.7;
+}
+
+.fade:after {
+    content: '';
+    position: absolute;
+    inset:0;
+    background:black;
+    opacity:0;
+    z-index:2
 }
 
 .custom-modal {
