--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -29,7 +29,6 @@
         </div>
     </div>
 </div>
-
 <div class="custom-modal" *ngIf="modalSuccess">
     <div class="modal-container">
         <div class="content">
@@ -45,8 +44,7 @@
         </div>
     </div>
 </div>
-
-<div class="custom-container">
+<div class="custom-container" [ngClass]="{ fade: fadePost || fadeEditForm || fadeCommentForm || fadeComment}">
     <div class="row mb-4 my-lg-0">
         <div class="col-md-6">
             <div class="my-3">
@@ -80,7 +78,10 @@
               </div>
         </div>
     </div>
-    <div class="box-container mt-3" [ngClass]="{ fade: fadePost, blue: bgBluePost, green: bgGreenPost, yellow: bgYellowPost, brown: bgBrownPost, purple: bgPurplePost, pink: bgPinkPost }">
+    <div class="box-container mt-3" [ngClass]="{ fade: fadePost, blue: bgBluePost, green: bgGreenPost, yellow: bgYellowPost, brown: bgBrownPost, purple: bgPurplePost, pink: bgPinkPost, grey: bgGreyPost, red: bgRedPost, default: bgDefaultPost }">
+        <div class="date">
+            <span *ngIf="showEdit">Edited • </span>{{postData?.date | dateAgo}}
+        </div>
         <div class="box">
             <div class="titleText text-center mb-1">
                 {{postData?.title}}
@@ -97,13 +98,22 @@
         <div class="loading progressIndicator"  *ngIf="isProgressVisibleDelete">
             <mat-progress-spinner class=" example-margin" color="secondary" mode="indeterminate"></mat-progress-spinner>
         </div>
+        <div class="loading progressIndicator" *ngIf="pageLoading">
+            <mat-progress-spinner class=" example-margin" color="secondary" mode="indeterminate"></mat-progress-spinner>
+        </div>
     </div>
-    <div class="d-flex justify-content-center flex-wrap my-4">
-        <button *ngIf="modifyPost" class="m-2" mat-raised-button color="primary" data-toggle="collapse" data-target="#collapseEdit" aria-expanded="false" aria-controls="collapseEdit" style="background-color:rgb(255, 149, 49) !important; color:white;">
+    <div *ngIf="errorMessageDelete" class="bodyText text-center my-3" style="color:rgb(226, 0, 0);">
+        {{errorMessageDelete}}
+    </div>
+    <div *ngIf="errorMessageRefresh" class="bodyText text-center my-3" style="color:rgb(226, 0, 0);">
+        {{errorMessageRefresh}}
+    </div>
+    <div class="d-flex justify-content-center flex-wrap my-2 pb-3 pb-lg-2">
+        <button *ngIf="modifyPost" class="modify m-2" mat-raised-button color="primary" data-toggle="collapse" data-target="#collapseEdit" aria-expanded="false" aria-controls="collapseEdit" style="background-color:rgb(255, 149, 49) !important; color:white;">
             <mat-icon>edit</mat-icon>
             <span>Edit</span>
         </button>
-        <button (click)="onDeletePost()" *ngIf="modifyPost" class="m-2" mat-raised-button color="primary" style="background-color:rgb(255, 49, 49) !important; color:white;">
+        <button (click)="onDeletePost()" *ngIf="modifyPost" class="modify m-2" mat-raised-button color="primary" style="background-color:rgb(255, 49, 49) !important; color:white;">
             <mat-icon>delete</mat-icon>
             <span>Delete</span>
         </button>
@@ -115,8 +125,8 @@
 </div>
 
 <div class="collapse" id="collapseEdit" [ngClass]="{ fade: fadeEditForm }">
-    <div class="custom-container pb-3">
-        <div class="box-container" [ngClass]="{ fade: fadePost, blue: bgBluePost, green: bgGreenPost, yellow: bgYellowPost, brown: bgBrownPost, purple: bgPurplePost, pink: bgPinkPost }">
+    <div class="custom-container pb-5 pb-lg-4">
+        <div class="box-container" [ngClass]="{ fade: fadePost, blue: bgBluePost, green: bgGreenPost, yellow: bgYellowPost, brown: bgBrownPost, purple: bgPurplePost, pink: bgPinkPost, grey: bgGreyPost, red: bgRedPost, default: bgDefaultPost }">
             <div class="box">
                 <div class="bodyText text-center mb-1">
                     Let's make some changes!
@@ -129,30 +139,27 @@
                             <br>
                         </div>
                     </div>
-                    <div class="text-center d-lg-flex justify-content-center my-4">
-                        <button class="mb-3 mb-lg-0 mx-lg-2" mat-raised-button color="primary" (click)="useNameEdit()">Use My Name</button>
-                        <button class="mx-lg-2" mat-raised-button color="primary" (click)="hideNameEdit()">I Want To Be Anonymous</button>
+                    <div class="text-center d-lg-flex justify-content-center mb-2">
+                        <button class="m-2" mat-raised-button color="primary" (click)="useNameEdit()">Use My Name</button>
+                        <button class="m-2" mat-raised-button color="primary" (click)="hideNameEdit()">I Want To Be Anonymous</button>
                     </div>
                     <!-- <div class="text-center error-text" style="color:red; visibility:hidden;" [ngClass]="{'show' : author && author.invalid && author.touched}">
                         Please enter a valid name
                     </div> -->
     
-                    <div class="form-panel" style="display:none;">
-                        <div class="form-row">
-                            <input [attr.disabled]="editForm.invalid ? true : true" type="text" name="color" formControlName="color" placeholder="Color" [ngClass]="{'invalid' : color && color.invalid && color.touched, 'valid' : color && color.valid && color.touched}" style="text-align:center; background:yellow; opacity:0.7;">
-                            <br>
-                        </div>
-                    </div>
                     <div class="bodyText text-center mt-2">
                         Want a New Color?
                     </div>
-                    <div class="text-center d-lg-flex justify-content-center my-2">
-                        <button class="mx-2 mb-3" style="background-color:rgb(184,216,215);" mat-raised-button color="primary" (click)="bluePost()">Blue</button>
-                        <button class="mx-2 mb-3" style="background-color:rgb(213,229,163);" mat-raised-button color="primary" (click)="greenPost()">Green</button>
-                        <button class="mx-2 mb-3" style="background-color:rgb(254,226,139);" mat-raised-button color="primary" (click)="yellowPost()">Yellow</button>
-                        <button class="mx-2 mb-3" style="background-color:rgb(213,193,171);" mat-raised-button color="primary" (click)="brownPost()">Brown</button>
-                        <button class="mx-2 mb-3" style="background-color:rgb(186,169,186);" mat-raised-button color="primary" (click)="purplePost()">Purple</button>
-                        <button class="mx-2 mb-3" style="background-color:pink;" mat-raised-button color="primary" (click)="pinkPost()">Pink</button>
+                    <div class="color-buttons text-center d-lg-flex justify-content-center my-2">
+                    <button class="mx-2 mx-lg-1 mb-3 mb-lg-2" style="background-color:#fff2c7;" mat-raised-button color="primary" (click)="defaultPost()">Default</button>
+                    <button class="mx-2 mx-lg-1 mb-3 mb-lg-2" style="background-color:rgb(184,216,215);" mat-raised-button color="primary" (click)="bluePost()">Blue</button>
+                    <button class="mx-2 mx-lg-1 mb-3 mb-lg-2" style="background-color:rgb(213,229,163);" mat-raised-button color="primary" (click)="greenPost()">Green</button>
+                    <button class="mx-2 mx-lg-1 mb-3 mb-lg-2" style="background-color:rgb(254,226,139);" mat-raised-button color="primary" (click)="yellowPost()">Yellow</button>
+                    <button class="mx-2 mx-lg-1 mb-3 mb-lg-2" style="background-color:rgb(213,193,171);" mat-raised-button color="primary" (click)="brownPost()">Brown</button>
+                    <button class="mx-2 mx-lg-1 mb-3 mb-lg-2" style="background-color:rgb(186,169,186);" mat-raised-button color="primary" (click)="purplePost()">Purple</button>
+                    <button class="mx-2 mx-lg-1 mb-3 mb-lg-2" style="background-color:pink;" mat-raised-button color="primary" (click)="pinkPost()">Pink</button>
+                    <button class="mx-2 mx-lg-1 mb-3 mb-lg-2" style="background-color:rgb(255, 137, 137);" mat-raised-button color="primary" (click)="redPost()">Red</button>
+                    <button class="mx-2 mx-lg-1 mb-3 mb-lg-2" style="background-color:rgb(189, 189, 189);" mat-raised-button color="primary" (click)="greyPost()">Grey</button>
                     </div>
             
                     <div class="form-panel">
@@ -186,8 +193,8 @@
                 <mat-progress-spinner class=" example-margin" color="secondary" mode="indeterminate"></mat-progress-spinner>
             </div>
         </div>
-        <div class="bodyText text-center my-3" style="color:rgb(226, 0, 0);">
-            {{firebaseErrorMessage}}
+        <div *ngIf="errorMessageUpdate" class="bodyText text-center my-3" style="color:rgb(226, 0, 0);">
+            {{errorMessageUpdate}}
         </div>
     </div>
 </div>
@@ -241,31 +248,56 @@
         <div class="loading progressIndicator"  *ngIf="isProgressVisibleComment">
             <mat-progress-spinner class=" example-margin" color="secondary" mode="indeterminate"></mat-progress-spinner>
         </div>
+        <div *ngIf="errorMessageComment" class="bodyText text-center my-3" style="color:rgb(226, 0, 0);">
+            {{errorMessageComment}}
+        </div>
     </div>
 </div>
-
-<div class="container pb-4" style="position:relative;">
-    <div class="bodyText my-5" *ngFor="let comment of commentData" [ngClass]="{ fade: fadeComment }">
-        <div class="comment-container mx-auto {{comment?.color}}">
+<div *ngIf="showComments" class="container pb-4 comments" style="position:relative;" [ngClass]="{ fade: fadePost || fadeEditForm || fadeCommentForm }">
+    <div *ngIf="errorMessageDeleteComment" class="bodyText text-center" style="color:rgb(226, 0, 0);">
+        {{errorMessageDeleteComment}}
+    </div>
+    <div class="bodyText my-5" *ngFor="let comment of commentData | paginate: {itemsPerPage: 4, currentPage: p}" [ngClass]="{ fade: fadeComment }">
+        <div class="comment-container mx-auto {{comment?.color}}" *ngIf="user | async as user">
+            <h6 class="smallDate">{{comment?.date | dateAgo}}</h6>
+            <div class="badge pb-2" *ngIf="comment?.isOwner">
+                <div class="row" style="background:#dff5ff; border-radius:10px;">
+                    <div class="col-4 my-auto px-0 pt-1">
+                        <mat-icon style="font-size:20px !important; color:rgb(255, 149, 49) !important">star</mat-icon>
+                    </div>
+                    <div class="col-8 my-auto pl-0">
+                        <span>Author</span>
+                    </div>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-lg-4 my-auto">
                     <div class="text-center my-2">
                         {{comment?.author}}
                     </div>
                     <div class="d-flex justify-content-center">
-                        <img class="avatar" src="../../../assets/Linux-Smiley.svg" alt="avatar">
+                        <img class="avatar" src="{{comment?.avatarURL}}" alt="avatar">
                     </div>
                 </div>
                 <div class="col-lg-8 my-auto p-4">
                     {{comment?.message}}
                 </div>
             </div>
-            <button *ngIf="comment?.canModify" (click)="onDeleteComment(comment?.id)" class="mx-2 mb-4 float-right" mat-raised-button color="primary" style="background-color:rgb(255, 49, 49) !important; color:white;">
+            <button *ngIf="comment?.canModify && !isOwner" (click)="onDeleteComment(comment?.id)" class="mx-2 mb-4 float-right" mat-raised-button color="primary" style="background-color:rgb(255, 49, 49) !important; color:white;">
+                <mat-icon>delete</mat-icon>
+            </button>
+            <button *ngIf="isOwner" (click)="onDeleteComment(comment?.id)" class="mx-2 mb-4 float-right" mat-raised-button color="primary" style="background-color:rgb(255, 49, 49) !important; color:white;">
                 <mat-icon>delete</mat-icon>
             </button>
         </div>
     </div>
     <div class="loading progressIndicator"  *ngIf="isProgressVisibleDeleteComment">
         <mat-progress-spinner class=" example-margin" color="secondary" mode="indeterminate"></mat-progress-spinner>
+    </div>
+    <div class="d-lg-flex d-none justify-content-center my-4 pb-5 bodyText" style="position:relative;" *ngIf="searchText == ''">
+        <pagination-controls class="my-pagination" (pageChange)="p = $event"></pagination-controls>
+    </div>
+    <div class="d-flex d-lg-none justify-content-center my-1 pb-4 bodyText" style="position:relative;" *ngIf="searchText == ''">
+        <pagination-controls class="my-pagination" (pageChange)="onPageChange($event)" (pageChange)="p = $event"></pagination-controls>
     </div>
 </div>
