--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -63,4 +63,14 @@
     <div class="bodyText text-center my-3" style="color:rgb(226, 0, 0);">
         {{firebaseErrorMessage}}
     </div>
+    <div class="bodyText text-center mt-5">
+        Want to demo the app? <br class="d-block d-lg-none">Use a demo account!
+    </div>
+    <div class="d-flex justify-content-center mt-4">
+        <div class="bodyText" style="font-size:19px;">
+            Email: <span style="color:red">demo@demo.com</span>
+            <br>
+            Password: <span style="color:red">demo123</span>
+        </div>
+    </div>
 </div>
