--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -66,7 +66,7 @@
     <div class="bodyText text-center mt-5">
         Want to demo the app? <br class="d-block d-lg-none">Use a demo account!
     </div>
-    <div class="d-flex justify-content-center mt-4">
+    <div class="d-flex justify-content-center mt-4 pb-4">
         <div class="bodyText" style="font-size:19px;">
             Email: <span style="color:red">demo@demo.com</span>
             <br>
