fix loading position on dashboard

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -88,7 +88,7 @@
         </div>
     </div>
     <!-- end -->
-    <div class="bodyText text-center my-5 loading" *ngIf="showAdd">
+    <div class="bodyText text-center my-5 noPostText" *ngIf="showAdd">
         There are currently no posts.<br>
         Be the first to add one!
     </div>
