--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -276,7 +276,7 @@
                         {{comment?.author}}
                     </div>
                     <div class="d-flex justify-content-center">
-                        <img class="avatar" src="{{comment?.avatarURL}}" alt="avatar">
+                        <img class="avatar" [src]="(comment?.avatarURL ?? 'assets/placeholder.svg')" alt="avatar">
                     </div>
                 </div>
                 <div class="col-lg-8 my-auto p-4">
