--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -2,11 +2,13 @@
     <img class="clipart-two" src="../../../assets/placeholder.svg" alt="clipart">
 </div>
 <div class="custom-modal" *ngIf="changeAvatar">
-    <button (click)="removeModal()" class="exit m-2" mat-raised-button color="primary" style="background-color:rgb(255, 49, 49) !important; color:white;">
-        <mat-icon>arrow_back</mat-icon>
-        <span>Nevermind</span>
-    </button>
     <div class="modal-container">
+        <div class="d-flex justify-content-center mt-4">
+            <button (click)="removeModal()" mat-raised-button color="primary" style="background-color:rgb(255, 49, 49) !important; color:white;">
+                <mat-icon>arrow_back</mat-icon>
+                <span>Nevermind</span>
+            </button>
+        </div>
         <div class="m-content">
             <div class="text-center">
                 <img *ngFor="let avatar of avatars" class="art m-2" (click)="updateAvatar(avatar.path)" src="{{avatar.path}}" alt="avatar">
