--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -73,7 +73,7 @@
 
 .noPostText {
     position: absolute;
-    top: 45%;
+    top: 62%;
     left: 0;
     right: 0;
     margin-top: -9px;
@@ -81,7 +81,7 @@
 
 .loading {
     position: fixed;
-    top: 50%;
+    top: 70%;
     left: 50%;
     -ms-transform: translateX(-50%) translateY(-50%);
     -webkit-transform: translate(-50%,-50%);
@@ -402,9 +402,12 @@ a:hover, a:focus {
         z-index: 1;
     }
 
-    // input[type="text"],
-    // textarea {
-    //     font-size: 20px;
-    // }
+    .noPostText {
+        position: absolute;
+        top: 45%;
+        left: 0;
+        right: 0;
+        margin-top: -9px;
+    }
     
 }
