update search bar

--- a/src/app/components/dashboard/dashboard.component.scss
+++ b/src/app/components/dashboard/dashboard.component.scss
@@ -158,22 +158,17 @@ button {
     100% { transform: translateY(0); }
 }
 
-input[type="text"],
-textarea {
+input{
     color: black;
-    font-size: 20px;
+    font-size: 17px;
     padding: 14px 18px;
-    line-height: 35px;
-    height: 20px;
+    height: 40px;
     border: none;
     outline: none;
     border-bottom: 3px solid rgba(0, 0, 0, 0.555);
-    // border-left: 3px solid black;
     margin: 10px;
     border-radius: 3px;
-    flex-grow: 1;
     background:rgba(255, 255, 255, 0.52);
-    transition: 0.5s linear;
 }
 
 // input:focus {
@@ -409,5 +404,22 @@ a:hover, a:focus {
         right: 0;
         margin-top: -9px;
     }
+
+input{
+    color: black;
+    font-size: 20px;
+    padding: 14px 18px;
+    line-height: 35px;
+    height: 40px;
+    border: none;
+    outline: none;
+    border-bottom: 3px solid rgba(0, 0, 0, 0.555);
+    // border-left: 3px solid black;
+    margin: 10px;
+    border-radius: 3px;
+    flex-grow: 1;
+    background:rgba(255, 255, 255, 0.52);
+    transition: 0.5s linear;
+}
     
 }
