--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -48,8 +48,14 @@
         </button>
     </div>
     <div class="d-flex justify-content-center d-lg-block" *ngIf="postsExist">
-        <mat-icon>search</mat-icon>
-        <input type="text" placeholder="Search" [(ngModel)]="searchText">
+        <div class="row">
+            <div class="my-auto">
+                <mat-icon>search</mat-icon>
+            </div>
+            <div class="my-auto">
+                <input type="text" placeholder="Search" [(ngModel)]="searchText">
+            </div>
+        </div>
     </div>
     <!-- <div class="d-flex justify-content-center mt-1 bodyText" style="position:relative;" *ngIf="searchText == ''">
         <pagination-controls class="my-pagination" (pageChange)="p = $event"></pagination-controls>
@@ -71,7 +77,7 @@
         </div>
     </div>
     <!-- displays all posts when using search filter -->
-    <div class="row" *ngIf="searchText !== '' && postsExist">
+    <div class="posts row" *ngIf="searchText !== '' && postsExist">
         <div class="col-lg-4 col-md-6 content-card" *ngFor="let post of postData | deepFilter: searchText: ['name']">
             <a routerLink="/posts/{{post?.id}}">
                 <div class="card-big-shadow">
